--- a/JPA/newBD/pom.xml
+++ b/JPA/newBD/pom.xml
@@ -118,11 +118,11 @@
             <scope>test</scope>
         </dependency>
 
-        <dependency>
-            <groupId>org.wildfly.plugins</groupId>
-            <artifactId>wildfly-maven-plugin</artifactId>
-            <version>1.1.0.Alpha11</version>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>org.wildfly.plugins</groupId>-->
+            <!--<artifactId>wildfly-maven-plugin</artifactId>-->
+            <!--<version>1.1.0.Alpha11</version>-->
+        <!--</dependency>-->
 
         <dependency>
             <groupId>dom4j</groupId>
