--- a/JPA/newBD/src/main/webapp/WEB-INF/web.xml
+++ b/JPA/newBD/src/main/webapp/WEB-INF/web.xml
@@ -54,6 +54,15 @@
     </servlet-mapping>
 
 
+    <!-- page on load-->
+    <welcome-file-list>
+        <welcome-file>index.jsp</welcome-file>
+    </welcome-file-list>
+    <!-- error page -->
+    <error-page>
+        <error-code>403</error-code>
+        <location>/404.jsp</location>
+    </error-page>
 
     <servlet-mapping>
         <servlet-name>default</servlet-name>
