--- a/JPA/newBD/src/main/webapp/WEB-INF/web.xml
+++ b/JPA/newBD/src/main/webapp/WEB-INF/web.xml
@@ -1,12 +1,13 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <web-app version="2.5" xmlns="http://java.sun.com/xml/ns/javaee"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd">
-    <display-name>Spring MVC Application</display-name>
 
-    <!--<context-param>
-        <param-name>contextConfigLocation</param-name>
-        <param-value>/WEB-INF/spring/root-context.xml</param-value>
-    </context-param>-->
+    <!-- The definition of the Root Spring Container shared by all Servlets and Filters -->
+    <!--<context-param>-->
+        <!--<param-name>contextConfigLocation</param-name>-->
+        <!--<param-value>/WEB-INF/spring/root-context.xml</param-value>-->
+    <!--</context-param>-->
 
     <!-- Spring Security Configuration File -->
     <context-param>
@@ -15,54 +16,48 @@
     </context-param>
 
     <!-- Creates the Spring Container shared by all Servlets and Filters -->
-    <listener>
-        <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
-    </listener>
-    <listener>
-        <listener-class>org.springframework.security.web.session.HttpSessionEventPublisher</listener-class>
-    </listener>
+    <!--<listener>-->
+        <!--<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>-->
+    <!--</listener>-->
+    <!--<listener>-->
+        <!--<listener-class>org.springframework.security.web.session.HttpSessionEventPublisher</listener-class>-->
+    <!--</listener>-->
 
-    <session-config>
-        <session-timeout>15</session-timeout>
-    </session-config>
+    <!--<session-config>-->
+        <!--<session-timeout>15</session-timeout>-->
+    <!--</session-config>-->
 
 
     <!-- Spring Security Filter -->
-    <filter>
-        <filter-name>springSecurityFilterChain</filter-name>
-        <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
-    </filter>
-    <filter-mapping>
-        <filter-name>springSecurityFilterChain</filter-name>
-        <url-pattern>/*</url-pattern>
-    </filter-mapping>
+    <!--<filter>-->
+        <!--<filter-name>springSecurityFilterChain</filter-name>-->
+        <!--<filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>-->
+    <!--</filter>-->
+    <!--<filter-mapping>-->
+        <!--<filter-name>springSecurityFilterChain</filter-name>-->
+        <!--<url-pattern>/*</url-pattern>-->
+    <!--</filter-mapping>-->
+
+    <!-- Creates the Spring Container shared by all Servlets and Filters -->
+    <listener>
+        <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+    </listener>
 
     <!-- Processes application requests -->
     <servlet>
-        <servlet-name>mvcDispatcher</servlet-name>
+        <servlet-name>appServlet</servlet-name>
         <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
         <init-param>
             <param-name>contextConfigLocation</param-name>
-            <param-value>/WEB-INF/spring/mvcDispatcher-servlet.xml</param-value>
+            <param-value>/WEB-INF/spring/appServlet/servlet-context.xml</param-value>
         </init-param>
         <load-on-startup>1</load-on-startup>
     </servlet>
 
     <servlet-mapping>
-        <servlet-name>mvcDispatcher</servlet-name>
+        <servlet-name>appServlet</servlet-name>
         <url-pattern>/</url-pattern>
     </servlet-mapping>
-
-
-    <!-- page on load-->
-    <welcome-file-list>
-        <welcome-file>index.jsp</welcome-file>
-    </welcome-file-list>
-    <!-- error page -->
-    <error-page>
-        <error-code>403</error-code>
-        <location>/404.jsp</location>
-    </error-page>
 
     <servlet-mapping>
         <servlet-name>default</servlet-name>
@@ -101,5 +96,4 @@
         <servlet-name>default</servlet-name>
         <url-pattern>*.svg</url-pattern>
     </servlet-mapping>
-
 </web-app>
