--- a/JPA/newBD/pom.xml
+++ b/JPA/newBD/pom.xml
@@ -217,6 +217,14 @@
             <version>4.1.3.RELEASE</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/org.codehaus.sonar/sonar-maven-plugin -->
+        <dependency>
+            <groupId>org.codehaus.sonar</groupId>
+            <artifactId>sonar-maven-plugin</artifactId>
+            <version>5.1</version>
+        </dependency>
+
+
     </dependencies>
 
     <build>
@@ -245,7 +253,6 @@
                 <artifactId>jboss-as-maven-plugin</artifactId>
                 <version>7.9.Final</version>
             </plugin>
-
         </plugins>
     </build>
     <properties>
@@ -254,5 +261,26 @@
         <java-version>1.8</java-version>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
+        <sonar.language>java</sonar.language>
     </properties>
+    <!--<settings>-->
+        <!--<profiles>-->
+            <!--<profile>-->
+                <!--<id>sonar</id>-->
+                <!--<activation>-->
+                    <!--<activeByDefault>true</activeByDefault>-->
+                <!--</activation>-->
+                <!--<properties>-->
+                    <!--<sonar.jdbc.url>-->
+                        <!--jdbc:mysql://localhost:3306/sonar?useUnicode=true&amp;characterEncoding=utf8-->
+                    <!--</sonar.jdbc.url>-->
+                    <!--<sonar.jdbc.username>sonar</sonar.jdbc.username>-->
+                    <!--<sonar.jdbc.password>sonar</sonar.jdbc.password>-->
+                    <!--<sonar.host.url>-->
+                        <!--http://localhost:9000/sonar-->
+                    <!--</sonar.host.url>-->
+                <!--</properties>-->
+            <!--</profile>-->
+        <!--</profiles>-->
+    <!--</settings>-->
 </project>
