--- a/JPA/newBD/pom.xml
+++ b/JPA/newBD/pom.xml
@@ -93,17 +93,14 @@
             <version>1.2</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/log4j/log4j -->
         <dependency>
-            <groupId>org.apache.logging.log4j</groupId>
-            <artifactId>log4j-api</artifactId>
-            <version>2.4.1</version>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>1.2.17</version>
         </dependency>
 
-        <dependency>
-            <groupId>org.apache.logging.log4j</groupId>
-            <artifactId>log4j-core</artifactId>
-            <version>2.4.1</version>
-        </dependency>
+
 
         <dependency>
             <groupId>org.mockito</groupId>
@@ -135,14 +132,15 @@
             <groupId>org.springframework</groupId>
             <artifactId>spring-context</artifactId>
             <version>${org.springframework-version}</version>
-            <exclusions>
-                <!-- Exclude Commons Logging in favor of SLF4j -->
-                <exclusion>
-                    <groupId>commons-logging</groupId>
-                    <artifactId>commons-logging</artifactId>
-                </exclusion>
-            </exclusions>
+            <!--<exclusions>-->
+
+                <!--<exclusion>-->
+                    <!--<groupId>commons-logging</groupId>-->
+                    <!--<artifactId>commons-logging</artifactId>-->
+                <!--</exclusion>-->
+            <!--</exclusions>-->
         </dependency>
+
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-webmvc</artifactId>
@@ -161,20 +159,11 @@
         <!--<version>${org.aspectj-version}</version>-->
         <!--</dependency>-->
 
-        <!-- https://mvnrepository.com/artifact/org.aspectj/aspectjweaver -->
         <dependency>
             <groupId>org.aspectj</groupId>
             <artifactId>aspectjweaver</artifactId>
             <version>1.8.9</version>
         </dependency>
-
-
-         <!--Apache Commons DBCP-->
-        <!--<dependency>-->
-        <!--<groupId>commons-dbcp</groupId>-->
-        <!--<artifactId>commons-dbcp</artifactId>-->
-        <!--<version>1.4</version>-->
-        <!--</dependency>-->
 
         <dependency>
             <groupId>org.apache.commons</groupId>
@@ -182,22 +171,18 @@
             <version>2.1.1</version>
         </dependency>
 
-
-        <!-- Spring ORM -->
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-orm</artifactId>
             <version>${org.springframework-version}</version>
         </dependency>
 
-        <!-- https://mvnrepository.com/artifact/org.springframework.security/spring-security-core -->
         <dependency>
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-core</artifactId>
             <version>4.1.3.RELEASE</version>
         </dependency>
 
-        <!-- https://mvnrepository.com/artifact/org.springframework.security/spring-security-web -->
         <dependency>
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-web</artifactId>
@@ -210,20 +195,17 @@
             <version>4.1.3.RELEASE</version>
         </dependency>
 
-        <!-- Spring Security JSP Taglib -->
         <dependency>
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-taglibs</artifactId>
             <version>4.1.3.RELEASE</version>
         </dependency>
 
-        <!-- https://mvnrepository.com/artifact/org.codehaus.sonar/sonar-maven-plugin -->
         <dependency>
             <groupId>org.codehaus.sonar</groupId>
             <artifactId>sonar-maven-plugin</artifactId>
             <version>5.1</version>
         </dependency>
-
 
     </dependencies>
 
@@ -263,24 +245,4 @@
         <maven.compiler.target>1.8</maven.compiler.target>
         <sonar.language>java</sonar.language>
     </properties>
-    <!--<settings>-->
-        <!--<profiles>-->
-            <!--<profile>-->
-                <!--<id>sonar</id>-->
-                <!--<activation>-->
-                    <!--<activeByDefault>true</activeByDefault>-->
-                <!--</activation>-->
-                <!--<properties>-->
-                    <!--<sonar.jdbc.url>-->
-                        <!--jdbc:mysql://localhost:3306/sonar?useUnicode=true&amp;characterEncoding=utf8-->
-                    <!--</sonar.jdbc.url>-->
-                    <!--<sonar.jdbc.username>sonar</sonar.jdbc.username>-->
-                    <!--<sonar.jdbc.password>sonar</sonar.jdbc.password>-->
-                    <!--<sonar.host.url>-->
-                        <!--http://localhost:9000/sonar-->
-                    <!--</sonar.host.url>-->
-                <!--</properties>-->
-            <!--</profile>-->
-        <!--</profiles>-->
-    <!--</settings>-->
 </project>
