--- a/JPA/newBD/pom.xml
+++ b/JPA/newBD/pom.xml
@@ -198,6 +198,12 @@
             <version>5.1</version>
         </dependency>
 
+        <dependency>
+            <groupId>commons-codec</groupId>
+            <artifactId>commons-codec</artifactId>
+            <version>1.9</version>
+        </dependency>
+
     </dependencies>
 
     <build>
