--- a/JPA/newBD/pom.xml
+++ b/JPA/newBD/pom.xml
@@ -198,6 +198,12 @@
             <version>1.9</version>
         </dependency>
 
+        <dependency>
+            <groupId>javax.mail</groupId>
+            <artifactId>mail</artifactId>
+            <version>1.5.0-b01</version>
+        </dependency>
+
     </dependencies>
 
     <build>
