--- a/eCare/RESTClient/pom.xml
+++ b/eCare/RESTClient/pom.xml
@@ -84,11 +84,11 @@
     <build>
         <finalName>RESTClient</finalName>
         <plugins>
-            <!--<plugin>-->
-            <!--<groupId>org.wildfly.plugins</groupId>-->
-            <!--<artifactId>wildfly-maven-plugin</artifactId>-->
-            <!--<version>1.1.0.Alpha11</version>-->
-            <!--</plugin>-->
+            <plugin>
+            <groupId>org.wildfly.plugins</groupId>
+            <artifactId>wildfly-maven-plugin</artifactId>
+            <version>1.1.0.Alpha11</version>
+            </plugin>
             <plugin>
                 <groupId>org.jboss.as.plugins</groupId>
                 <artifactId>jboss-as-maven-plugin</artifactId>
