--- a/eCare/operatorMainApp/pom.xml
+++ b/eCare/operatorMainApp/pom.xml
@@ -221,11 +221,11 @@
                 </configuration>
             </plugin>
 
-            <!--<plugin>-->
-            <!--<groupId>org.wildfly.plugins</groupId>-->
-            <!--<artifactId>wildfly-maven-plugin</artifactId>-->
-            <!--<version>1.1.0.Alpha11</version>-->
-            <!--</plugin>-->
+            <plugin>
+            <groupId>org.wildfly.plugins</groupId>
+            <artifactId>wildfly-maven-plugin</artifactId>
+            <version>1.1.0.Alpha11</version>
+            </plugin>
 
             <plugin>
                 <groupId>org.jboss.as.plugins</groupId>
