--- a/eCare/RESTClient/pom.xml
+++ b/eCare/RESTClient/pom.xml
@@ -91,6 +91,22 @@
             <artifactId>resteasy-client</artifactId>
             <version>3.0.2.Final</version>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-core -->
+        <dependency>
+            <groupId>org.codehaus.jackson</groupId>
+            <artifactId>jackson-mapper-asl</artifactId>
+            <version>1.9.13</version>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.7</version>
+        </dependency>
+
+
     </dependencies>
     <build>
         <finalName>RESTClient</finalName>
