--- a/eCare/RESTClient/src/main/webapp/WEB-INF/web.xml
+++ b/eCare/RESTClient/src/main/webapp/WEB-INF/web.xml
@@ -36,5 +36,9 @@
         <servlet-name>Faces Servlet</servlet-name>
         <url-pattern>*.xhtml</url-pattern>
     </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>Faces Servlet</servlet-name>
+        <url-pattern>*.jsp</url-pattern>
+    </servlet-mapping>
 
 </web-app>
